correction de l'overflow de la page home + début des tests stripe

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body
 {
+  overflow-x: hidden;
 }
 span.glyphicon-sunglasses {
     font-size: 5em;
@@ -16,11 +17,13 @@ span.glyphicon-sunglasses {
 	border: 1px solid black;*/
 }
 .vertical-center {
-  min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
+  min-height: 100%;  /* Fallback for browsers that do NOT support vh unit */
   min-height: 100vh;
 
   display: flex;
   align-items: center;
+  margin-right: 0;
+  margin-left: 0;
 }
 #home{
 	color: white;
@@ -45,9 +48,4 @@ hr {
     height: 1px;
     /*background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(149,  165, 166, 0.75), rgba(0, 0, 0, 0));*/
     background-color: rgba(149,  165, 166, 0.75);
-}
-.test
-{
-  height:100%;
-  height:100vh;
 }
